# neuro-knight

./: .gitignore  CMakeLists.txt  README.md  requiremnts.txt
apps/match-api/: main.py
apps/web-client/: index.html
apps/web-client/src/: main.js
apps/web-client/src/pages/GamePage/: GamePage.js
apps/web-client/src/styles/: global.css
configs/: linear.yaml  neural.yaml
modeling/: experiment.py  experiment_factory.py  linear_experiment.py  neural_experiment.py  neural_model.py  preprocess.py
post_training_analysis/: analyze_svd_weights.py
scripts/: generate_selfplay_dataset.cpp  run_web_match.cpp
src/cli/: args.cpp  args.hpp
src/core/: move.hpp  movelist.hpp  types.hpp  uci.hpp
src/eval/: eval_nn.cpp  eval_nn.hpp  eval_strategy.cpp  eval_strategy.hpp  nn_weights.hpp
src/game/: game.cpp  game.hpp
src/movegen/: bb_attacks.cpp  bb_attacks.hpp  bb_movegen.cpp  bb_movegen.hpp
src/openings/: opening_book.cpp  opening_book.h
src/parsing/: parse.cpp  parse.hpp
src/position/: bbposition.cpp  bbposition.hpp
src/render/: render.cpp  render.hpp
src/search/: search_strategy.cpp  search_strategy.hpp
src/selfplay/: match_web.cpp  match_web.hpp
tests/: t1.cpp
train/: train_linear.py  train_nn.py
